--- a/window_elite/window/404/index.html
+++ b/window_elite/window/404/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div class="page_not_found">
-	<div class="fourty_four">4<img class="fourty_four_img" src="img/logo_404.png">4</div>
+	<div class="fourty_four"><img class="fourty_four_img" src="img/imgpsh_fullsize.png"></div>
 	<div class="page_not_found_text">Страница не найдена</div>
 	<div class="turn_back"><a class="turn_back_link" href="#">На главную</a></div>
 </div>
