--- a/window_elite/window/index.html
+++ b/window_elite/window/index.html
@@ -65,10 +65,9 @@
 </div>
 	<div class="wrapper wrapper_slider">
         <ul class="bxslider">
-		  <li><img src="img/banner.png" alt="" /></li>
-		  <li><img src="img/banner.png" alt="" /></li>
-		  <li><img src="img/banner.png" alt="" /></li>
-		  <li><img src="img/banner.png" alt="" /></li>
+		  <li><img src="img/banner1.jpg" alt="" /></li>
+		  <li><img src="img/banner2.jpg" alt="" /></li>
+		  <li><img src="img/banner3.jpg" alt="" /></li>
         </ul>
 	</div>
 </div>
@@ -198,37 +197,37 @@
 		    <div class="carusel_hider">
 		        <ul class="item_slider_list">
 		            <li class="carusel_item">
-		               <img src="img/review.png" alt="">
+		               <img src="img/feedback_man.png" alt="">
 		               <h3 class="carusel_item_head">Пасечник Александр Владимирович</h3>
 		               <p class="carusel_item_text">"Солидная компания, приехал хароший замерщик,лет 30-ти,профи-сразу видно, помог мне выбрать класную ткань, которая спасла меня от жары, в квартире стало намного прохладнее+харашо подошла к моему интерьеру.В общем доволен 5+, Спасибо огромное!!!"</p>
 		            </li>
 		            <li class="carusel_item">
-		                <img src="img/review.png" alt="">
+		                <img src="img/feedback_girl.png" alt="">
 		                <h3 class="carusel_item_head">Павленко Алина</h3>
 		               <p class="carusel_item_text">- "Да. Мне понравилсь ваше обслуживание. Теперь в моей комнате уютний свет и приятний цвет."</p
 		            </li>
 		            <li class="carusel_item">
-		               <img src="img/review.png" alt=""> 
+		               <img src="img/feedback_girl1.png" alt=""> 
 		               <h3 class="carusel_item_head">Віталіна Федорівна</h3>
 		               <p class="carusel_item_text">"Так, я задоволена результатом. Ціни у вас помірні та й якість задовільна."</p>
 		            </li>
 		            <li class="carusel_item">
-		                <img src="img/review.png" alt="">
+		                <img src="img/feedback_man.png" alt="">
 		                <h3 class="carusel_item_head">Сергій Володимирович</h3>
 		               <p class="carusel_item_text">"Ага добре. Стильні вийшли жалюзі. І світлом можна регулювати. Нада буде в прихожу собі повісити."</p>
 		            </li>
 		            <li class="carusel_item">
-		                <img src="img/review.png" alt="">
+		                <img src="img/feedback_girl.png" alt="">
 		                <h3 class="carusel_item_head">Титарчук Нина Григорьевна</h3>
 		               <p class="carusel_item_text">"Здравствуйте, мне 63 года, хочу поблагодарить Вас за установленные ролеты,ткань выбрала недорогую, пенсия не позволяет, но всьо же стало намного уютнее, ребята молодцы, всьо сделали аккуратно, спасибо, буду вас рекомендовать."</p>
 		            </li>
 		            <li class="carusel_item">
-		                <img src="img/review.png" alt="">
+		                <img src="img/feedback_man.png" alt="">
 		                <h3 class="carusel_item_head">Виталий Викторович</h3>
 		               <p class="carusel_item_text">"Конечно удобно. Ненужно дергать больше шторы. Позднее закажу у вас еще на улицу ролеты, с ними буднт удобнее."</p>
 		            </li>
 		            <li class="carusel_item">
-		                <img src="img/review.png" alt="">
+		                <img src="img/feedback_man.png" alt="">
 		                <h3 class="carusel_item_head">oleg</h3>
 		               <p class="carusel_item_text">"Только так. На эту жару полюбому вы спасли и сделано все отлично. +LIKE!"</p>
 		            </li>
