--- a/window_elite/window/index.html
+++ b/window_elite/window/index.html
@@ -65,7 +65,7 @@
 </div>
 	<div class="wrapper wrapper_slider">
         <ul class="bxslider">
-		  <li><img src="img/banner1.jpg" alt="" /></li>
+		  <li><img src="img/Банер-11.jpg" alt="" /></li>
 		  <li><img src="img/banner2.jpg" alt="" /></li>
 		  <li><img src="img/banner3.jpg" alt="" /></li>
         </ul>
@@ -212,29 +212,9 @@
 		               <p class="carusel_item_text">"Так, я задоволена результатом. Ціни у вас помірні та й якість задовільна."</p>
 		            </li>
 		            <li class="carusel_item">
-		                <img src="img/feedback_man.png" alt="">
-		                <h3 class="carusel_item_head">Сергій Володимирович</h3>
-		               <p class="carusel_item_text">"Ага добре. Стильні вийшли жалюзі. І світлом можна регулювати. Нада буде в прихожу собі повісити."</p>
-		            </li>
-		            <li class="carusel_item">
-		                <img src="img/feedback_girl.png" alt="">
+		                <img src="img/feedback.png" alt="">
 		                <h3 class="carusel_item_head">Титарчук Нина Григорьевна</h3>
 		               <p class="carusel_item_text">"Здравствуйте, мне 63 года, хочу поблагодарить Вас за установленные ролеты,ткань выбрала недорогую, пенсия не позволяет, но всьо же стало намного уютнее, ребята молодцы, всьо сделали аккуратно, спасибо, буду вас рекомендовать."</p>
-		            </li>
-		            <li class="carusel_item">
-		                <img src="img/feedback_man.png" alt="">
-		                <h3 class="carusel_item_head">Виталий Викторович</h3>
-		               <p class="carusel_item_text">"Конечно удобно. Ненужно дергать больше шторы. Позднее закажу у вас еще на улицу ролеты, с ними буднт удобнее."</p>
-		            </li>
-		            <li class="carusel_item">
-		                <img src="img/feedback_man.png" alt="">
-		                <h3 class="carusel_item_head">oleg</h3>
-		               <p class="carusel_item_text">"Только так. На эту жару полюбому вы спасли и сделано все отлично. +LIKE!"</p>
-		            </li>
-		            <li class="carusel_item">
-		                <img src="img/review.png" alt="">
-		                <h3 class="carusel_item_head">Галина</h3>
-		               <p class="carusel_item_text">"так. добре що я у вас взяла, ато не знала щоб робила від цеї жари. Хлопці зробили все як слід."</p>
 		            </li>
 		        </ul>
 		    </div>
