--- a/portfoliopage/index.html
+++ b/portfoliopage/index.html
@@ -169,7 +169,7 @@
 		<div class="filter-v1 margin-bottom-40">
               <div class="col-md-12">
                 <ul class="filter-category wow fadeInUp animated" style="visibility: visible;">
-                	<li class="filter active" data-filter="tz"><span>Составление ТЗ и прототипа сайта</span></li>
+                	<li class="filter filter1 active" data-filter="tz"><span>Составление ТЗ и прототипа сайта</span></li>
                 	<li class="filter" data-filter="design"><span>дизайн главной и внутренних страниц</span></li><li class="filter" data-filter="verstka"><span>верстка</span></li>
                 	<li class="filter" data-filter="programming"><span>программирование и перенос на СМS</span></li>
                 	<li class="filter" data-filter="testing"><span>тестирование  и наполнение контентом</span></li>   
@@ -304,8 +304,8 @@
      <a href="#contact" class="btn" style="background: #c03c2b;color: #fff;"><span>Узнать</span></a>
    </div></div></div></div>
 		</div>
-
-	<div class="callback container portfolio_padding">
+</div>
+	<div class="callback container padding_footer">
 		<div class="col-md-12">
 			<div class="heading wow fadeInDown animated" style="visibility: visible;">
 				<!-- Title -->
@@ -328,7 +328,7 @@
                </div>
                <div class="row">                
                 <div class="col-md-12 col-xs-12 required">
-                  <textarea id="message" placeholder="Введите текст" cols="40" name="message"></textarea>
+                  <textarea id="message" placeholder="Введите текст" cols="40" name="message" style="resize: none;"></textarea>
                 </div>
                 <div class="col-md-12 col-xs-12 text-center">
                   <button type="submit" class="btn send" onclick="ga('send', 'pageview', '/virtual/otpravit');"><span>Отправить письмо</span></button>
