--- a/portfoliopage/index.html
+++ b/portfoliopage/index.html
@@ -95,7 +95,7 @@
 <div class="portfolio_main portfolio_padding">
 	<div class="container">
 		<div class="col-md-6">
-			<div class="heading wow fadeInDown animated" style="visibility: visible;">
+			<div class="heading wow fadeInDown animated animated" style="visibility: visible;">
            <!-- Title --><div class="main-title">
             <h1><span>Корпоративный сайт</span></h1>
          </div> <h2 style="font-size: 45px">Decorum Elite<span class="title-shadow_portfolio skrollable skrollable-between" data-0="top:100px;" data-800="top:-45px;">Decorum Elite<span class="title-shadow skrollable skrollable-between" data-0="top:200px;" data-800="top:-45px;" style="top: 43.5062px;"></span></span></h2>
@@ -110,7 +110,7 @@
 		</div>
 	<div class="container stages portfolio_padding">
 			<div class="col-md-12">
-			<div class="heading wow fadeInDown animated" style="visibility: visible;">
+			<div class="heading wow fadeInDown animated animated" style="visibility: visible;">
            <!-- Title -->
 				<div class="main-title">
             	<h1><span>Этапы разработки</span></h1>
@@ -138,8 +138,7 @@
 		  </ul>
 
   <!-- Left and right controls -->
-		</div>
-		<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+		  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
 		    <span class="glyphicon glyphicon-chevron-left slider_btn" aria-hidden="true"></span>
 		    <span><i class="fa fa-angle-left" aria-hidden="true" style="padding-top: 10px;"></i></span>
 		  </a>
@@ -147,6 +146,7 @@
 		    <span class="glyphicon glyphicon-chevron-right slider_btn" aria-hidden="true"></span>
 		    <span><i class="fa fa-angle-right" aria-hidden="true" style="padding-top: 10px;"></i></span>
 		  </a>
+		</div>
 	</div>
 
 	<div class="container">
@@ -160,7 +160,7 @@
 				</div>
 	<div class="container all_stages portfolio_padding">
 			<div class="col-md-12">
-			<div class="heading wow fadeInDown animated" style="visibility: visible;">
+			<div class="heading wow fadeInDown animated animated" style="visibility: visible;">
            <!-- Title --><div class="main-title">
             <h1><span>Этапы разработки</span></h1>
          </div> <h2 style="font-size: 45px">СОЗДАНИЕ САЙТОВ ЛЮБОЙ  СЛОЖНОСТИ<span class="title-shadow_portfolio skrollable skrollable-between" data-0="top:100px;" data-800="top:-45px;">СОЗДАНИЕ САЙТОВ ЛЮБОЙ 
@@ -169,7 +169,7 @@
 		<div class="filter-v1 margin-bottom-40">
               <div class="col-md-12">
                 <ul class="filter-category wow fadeInUp animated" style="visibility: visible;">
-                	<li class="filter filter1 active" data-filter="tz"><span>Составление ТЗ и прототипа сайта</span></li>
+                	<li class="filter active" data-filter="tz"><span>Составление ТЗ и прототипа сайта</span></li>
                 	<li class="filter" data-filter="design"><span>дизайн главной и внутренних страниц</span></li><li class="filter" data-filter="verstka"><span>верстка</span></li>
                 	<li class="filter" data-filter="programming"><span>программирование и перенос на СМS</span></li>
                 	<li class="filter" data-filter="testing"><span>тестирование  и наполнение контентом</span></li>   
@@ -245,7 +245,7 @@
 	</div>
 	<div class="main_functional container">
 		<div class="col-md-12">
-			<div class="heading" style="visibility: visible;">
+			<div class="heading wow fadeInDown animated animated" style="visibility: visible;">
 				<!-- Title -->
 				<div class="main-title">
 					<h1><span>Основной функционал</span></h1>
@@ -254,7 +254,7 @@
 				<!-- Text -->
 				<div class="col-md-12 clearfix">
 					<div class="col-md-6">
-						<img id="main_finc_img1" src="img/decorum_preview.png"><img class="wow zoomIn animated" src="img/decorum_item.png">
+						<img id="main_finc_img1" src="img/decorum_preview.png">
 					</div>
 					<div class="col-md-6">
 						<h3>Каталог</h3>
@@ -267,12 +267,12 @@
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Exce</p>
 					</div>
 					<div class="col-md-6">
-						<img class="wow zoomIn animated" src="img/decorum_item.png"><img id="main_finc_img2" src="img/decorum_preview.png">
+						<img id="main_finc_img2" src="img/decorum_preview.png">
 					</div>
 				</div>
 				<div class="col-md-12 clearfix">
 					<div class="col-md-6">
-						<img id="main_finc_img3" src="img/decorum_preview.png"><img class="wow zoomIn animated" src="img/decorum_item.png">
+						<img id="main_finc_img3" src="img/decorum_preview.png">
 					</div>
 					<div class="col-md-6">
 						<h3>Каталог</h3>
@@ -304,10 +304,10 @@
      <a href="#contact" class="btn" style="background: #c03c2b;color: #fff;"><span>Узнать</span></a>
    </div></div></div></div>
 		</div>
-</div>
-	<div class="callback container padding_footer">
+
+	<div class="callback container portfolio_padding">
 		<div class="col-md-12">
-			<div class="heading wow fadeInDown animated" style="visibility: visible;">
+			<div class="heading wow fadeInDown animated animated" style="visibility: visible;">
 				<!-- Title -->
 				<div class="main-title">
 					<h1><span>Наш адрес</span></h1>
@@ -328,7 +328,7 @@
                </div>
                <div class="row">                
                 <div class="col-md-12 col-xs-12 required">
-                  <textarea id="message" placeholder="Введите текст" cols="40" name="message" style="resize: none;"></textarea>
+                  <textarea id="message" placeholder="Введите текст" cols="40" name="message"></textarea>
                 </div>
                 <div class="col-md-12 col-xs-12 text-center">
                   <button type="submit" class="btn send" onclick="ga('send', 'pageview', '/virtual/otpravit');"><span>Отправить письмо</span></button>
