--- a/portfoliopage/index.html
+++ b/portfoliopage/index.html
@@ -303,7 +303,7 @@
                   </div>  
                   <p class="price_portfolio"><strong>Узнать стоимость проекта</strong></p>              
               </div><div class="row text-center">
-     <a href="#contact" class="btn" style="background: #c03c2b;color: #fff;"><span>Узнать</span></a>
+     <a href="#contact" class="btn" style="background: #ff0000;color: #fff;"><span>Узнать</span></a>
    </div></div></div></div>
 		</div>
 </div>
