--- a/portfoliopage/index.html
+++ b/portfoliopage/index.html
@@ -141,11 +141,11 @@
 
   <!-- Left and right controls -->
 		</div>
-		<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+		<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev" style="background: #7a7a7a;">
 		    <span class="glyphicon glyphicon-chevron-left slider_btn" aria-hidden="true"></span>
 		    <span><i class="fa fa-angle-left" aria-hidden="true" style="padding-top: 10px;"></i></span>
 		  </a>
-		  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+		  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next" style="background: #7a7a7a;">
 		    <span class="glyphicon glyphicon-chevron-right slider_btn" aria-hidden="true"></span>
 		    <span><i class="fa fa-angle-right" aria-hidden="true" style="padding-top: 10px;"></i></span>
 		  </a>
@@ -252,29 +252,31 @@
 				<div class="main-title">
 					<h3 class="box_header"><span>Основной функционал</span></h3>
 				</div>
-				<h2 style="font-size: 45px">WEB САЙТ – ЭТО ЛИЦО КОМПАНИИ, ПОЭТОМУ БЕЗ ПРОФЕССИОНАЛОВ В ЭТОМ ДЕЛЕ НЕ ОБОЙТИСЬ.<span class="title-shadow skrollable skrollable-after" data-0="top:200px;" data-800="top:-45px;" style="top: -45px;"><span class="title-shadow skrollable skrollable-after" data-0="top:200px;" data-800="top:-45px;" style="top: -45px;"></span></span></h2>
+				<h2 style="font-size: 45px; padding-bottom: 50px;">WEB САЙТ – ЭТО ЛИЦО КОМПАНИИ, ПОЭТОМУ БЕЗ ПРОФЕССИОНАЛОВ В ЭТОМ ДЕЛЕ НЕ ОБОЙТИСЬ.<span class="title-shadow skrollable skrollable-after" data-0="top:200px;" data-800="top:-45px;" style="top: -45px;">WEB САЙТ – ЭТО ЛИЦО КОМПАНИИ, ПОЭТОМУ БЕЗ ПРОФЕССИОНАЛОВ В ЭТОМ ДЕЛЕ НЕ ОБОЙТИСЬ.<span class="title-shadow skrollable skrollable-after" data-0="top:200px;" data-800="top:-45px;" style="top: -45px;"></span></span></h2>
 				<!-- Text -->
-				<div class="col-md-12 clearfix">
+				</div>
+			</div>
+				<div class="clearfix">
 					<div class="col-md-6">
-						<img id="main_finc_img1" src="img/decorum_preview.png"><img class="wow zoomIn animated" src="img/decorum_item.png">
+						<div style="position: relative;"><img id="main_finc_img1" src="img/decorum_preview.png"><img  class="wow zoomIn animated positioned" src="img/decorum_item.png"></div>
 					</div>
 					<div class="col-md-6">
 						<h3>Каталог</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Exce</p>
 					</div>
 				</div>
-				<div class="col-md-12 clearfix">
+				<div class="clearfix">
 					<div class="col-md-6">
 						<h3>Фильтр</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Exce</p>
 					</div>
 					<div class="col-md-6">
-						<img class="wow zoomIn animated" src="img/decorum_item.png"><img id="main_finc_img2" src="img/decorum_preview.png">
+						<div style="position: relative;"><img  class="wow zoomIn animated positioned_left" src="img/decorum_item.png"><img style="float: right;" src="img/decorum_preview.png"></div>
 					</div>
 				</div>
-				<div class="col-md-12 clearfix">
+				<div class="clearfix">
 					<div class="col-md-6">
-						<img id="main_finc_img3" src="img/decorum_preview.png"><img class="wow zoomIn animated" src="img/decorum_item.png">
+						<div style="position: relative;"><img id="main_finc_img1" src="img/decorum_preview.png"><img  class="wow zoomIn animated positioned" src="img/decorum_item.png"></div>
 					</div>
 					<div class="col-md-6">
 						<h3>Каталог</h3>
