--- a/portfoliopage/index.html
+++ b/portfoliopage/index.html
@@ -256,7 +256,7 @@
 				<!-- Text -->
 				</div>
 			</div>
-				<div class="clearfix">
+				<div class="clearfix" style="padding-bottom: 10px;">
 					<div class="col-md-6">
 						<div style="position: relative;"><img id="main_finc_img1" src="img/decorum_preview.png"><img  class="wow zoomIn animated positioned" src="img/decorum_item.png"></div>
 					</div>
@@ -265,16 +265,16 @@
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Exce</p>
 					</div>
 				</div>
-				<div class="clearfix">
+				<div class="clearfix" style="padding-bottom: 10px;">
 					<div class="col-md-6">
 						<h3>Фильтр</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Exce</p>
 					</div>
 					<div class="col-md-6">
-						<div style="position: relative;"><img  class="wow zoomIn animated positioned_left" src="img/decorum_item.png"><img style="float: right;" src="img/decorum_preview.png"></div>
+						<div class="rightside" style="position: relative;"><img  class="wow zoomIn animated positioned_left" src="img/decorum_item.png"><img  src="img/decorum_preview.png"></div>
 					</div>
 				</div>
-				<div class="clearfix">
+				<div class="clearfix" style="padding-bottom: 10px;">
 					<div class="col-md-6">
 						<div style="position: relative;"><img id="main_finc_img1" src="img/decorum_preview.png"><img  class="wow zoomIn animated positioned" src="img/decorum_item.png"></div>
 					</div>
