--- a/portfoliopage/index.html
+++ b/portfoliopage/index.html
@@ -192,7 +192,7 @@
              			<img src="img/tz.png" alt="" title="">
               		</div>
               		<div class="col-md-6 fadeInRight animated">
-              			 <h3>Составление ТЗ и прототипа сайта</h3>
+              			 <h3>text1</h3>
               			 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Exce</p>
               		</div>
               	</div>
@@ -201,7 +201,7 @@
              			<img src="img/tz.png" alt="" title="">
               		</div>
               		<div class="col-md-6 fadeInRight animated">
-              			 <h3>Составление ТЗ и прототипа сайта</h3>
+              			 <h3>text2</h3>
               			 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Exce</p>
               		</div>
               	</div>
@@ -210,7 +210,7 @@
              			<img src="img/tz.png" alt="" title="">
               		</div>
               		<div class="col-md-6 fadeInRight animated">
-              			 <h3>Составление ТЗ и прототипа сайта</h3>
+              			 <h3>text3</h3>
               			 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Exce</p>
               		</div>
               	</div>
@@ -225,7 +225,7 @@
 					</div>
 				  </div>
 	</div>
-	<div class="skills">
+	<div class="skills" style="text-align: center;">
 		<div class="container portfolio_padding" style="background: #fff;">
 			<div class="col-md-12">
 				<div id="skills">
@@ -256,7 +256,7 @@
 				<!-- Text -->
 				</div>
 			</div>
-				<div class="clearfix" style="padding-bottom: 10px;">
+				<div class="clearfix" style="padding-bottom: 20px;">
 					<div class="col-md-6">
 						<div style="position: relative;"><img id="main_finc_img1" src="img/decorum_preview.png"><img  class="wow zoomIn animated positioned" src="img/decorum_item.png"></div>
 					</div>
@@ -265,7 +265,7 @@
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Exce</p>
 					</div>
 				</div>
-				<div class="clearfix" style="padding-bottom: 10px;">
+				<div class="clearfix" style="padding-bottom: 20px;">
 					<div class="col-md-6">
 						<h3>Фильтр</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Exce</p>
@@ -274,7 +274,7 @@
 						<div class="rightside" style="position: relative;"><img  class="wow zoomIn animated positioned_left" src="img/decorum_item.png"><img  src="img/decorum_preview.png"></div>
 					</div>
 				</div>
-				<div class="clearfix" style="padding-bottom: 10px;">
+				<div class="clearfix" style="padding-bottom: 20px;">
 					<div class="col-md-6">
 						<div style="position: relative;"><img id="main_finc_img1" src="img/decorum_preview.png"><img  class="wow zoomIn animated positioned" src="img/decorum_item.png"></div>
 					</div>
