--- a/halal/index.html
+++ b/halal/index.html
@@ -138,7 +138,7 @@
 </div>
 <div class="slogan">
 	<div class="wrapper">
-		<h2 class="slogan_header">Наша деятельность</h2>
+		<h2 class="slogan_header">«ЦЕНТР СЕРТИФИКАЦИИ «ХАЛЯЛЬ»</h2>
 		<div class="slogan_text">это независимая украинская организация, 
 обладающая статусом международной организации 
 в сфере сертификации соответствия производства 
