--- a/halal/index.html
+++ b/halal/index.html
@@ -148,7 +148,7 @@
 </main>
 
 
-<footer class="clearfix">
+<footer class="clearfix" style="height: 305px;">
 	<div class="column-2">
 		<div class="footer_summary">
 			<img src="img/logo.png">
