--- a/halal/index.html
+++ b/halal/index.html
@@ -146,8 +146,6 @@
 	</div>
 </div>
 </main>
-
-
 <footer class="clearfix" style="height: 305px;">
 	<div class="column-2">
 		<div class="footer_summary">
@@ -158,7 +156,7 @@
 Это независимая украинская организация обладающая статусом международной</div>
 			</div>
 			</div>
-			<!-- <div class="copyright">Создание и разработка сайта <a href="http://web-intellectus.com/">®Intellectus-studio 2016</a></div> -->
+			<div class="copyright">Создание и разработка сайта <a href="http://web-intellectus.com/">®Intellectus-studio 2016</a></div>
 	</div>
 	<div class="column-3">
 		<ul class="footer_nav">
