--- a/halal/index.html
+++ b/halal/index.html
@@ -51,7 +51,14 @@
 					<ul class="nav clearfix">
 						<li class="nav_item"><a class="nav_item_link" href="#">О компании</a></li>
 						<li class="nav_item"><a class="nav_item_link" href="#">Клиенты</a></li>
-						<li class="nav_item"><a class="nav_item_link" href="#">Сертификация</a></li>
+						<li class="nav_item dropdown">
+							<a class="nav_item_link" href="#">Сертификация</a>
+							  	<ul class="dropdown-content">
+								    <li class="dropdown-content_item"><a href="#">Об Исламе</a></li>
+								    <li class="dropdown-content_item"><a href="#">Наши новости</a></li>
+								    <li class="dropdown-content_item"><a href="#">Полезные статьи</a></li>
+								</ul>
+						</li>
 						<li class="nav_item dropdown">
 							<a class="nav_item_link" href="#">Новости</a>
 							  	<ul class="dropdown-content">
@@ -146,8 +153,8 @@
 	</div>
 </div>
 </main>
-<footer class="clearfix" style="height: 305px;">
-	<div class="column-2">
+<footer class="clearfix">
+	<div class="column-2 clearfix">
 		<div class="footer_summary">
 			<img src="img/logo.png">
 			<div class="footer_item">
@@ -156,9 +163,7 @@
 Это независимая украинская организация обладающая статусом международной</div>
 			</div>
 			</div>
-			<div class="copyright">Создание и разработка сайта <a href="http://web-intellectus.com/">®Intellectus-studio 2016</a></div>
-	</div>
-	<div class="column-3">
+			<div class="column-3">
 		<ul class="footer_nav">
 				<li class="footer_nav_item"><a class="footer_nav_item_link" href="">О компании</a></li>
 				<li class="footer_nav_item"><a class="footer_nav_item_link" href="">Клиенты</a></li>
@@ -167,6 +172,9 @@
 				<li class="footer_nav_item"><a class="footer_nav_item_link" href="">Контакты</a></li>
 			</ul>
 	</div>
+			<div class="copyright clearfix">Создание и разработка сайта <a href="http://web-intellectus.com/">®Intellectus-studio 2016</a></div>
+	</div>
+	
 	<div class="column-4"><div class="footer_contacts">
 				<table cellpadding="5">
 					<tr>
