--- a/halal/index.html
+++ b/halal/index.html
@@ -48,6 +48,7 @@
 		<div class="second_layer">
 			<div class="wrapper clearfix">
 				<div class="container container_right col_container clearfix">
+				<div class="hamburger_menu"><i class="fa fa-bars" aria-hidden="true"></i></div>
 					<ul class="nav clearfix">
 						<li class="nav_item"><a class="nav_item_link" href="#">О компании</a></li>
 						<li class="nav_item"><a class="nav_item_link" href="#">Клиенты</a></li>
@@ -176,7 +177,7 @@
 	</div>
 	
 	<div class="column-4"><div class="footer_contacts">
-				<table cellpadding="5">
+				<table cellpadding="5" style="margin: 0 auto;">
 					<tr>
 					04071, Украина, г. 
 					Киев, ул. Лукьяновская, 46</tr>
@@ -199,8 +200,7 @@
 				</table>
 		</div></div>
 	<div class="column-5">
-		<div id="map_canvas" style="width:100%; height:100%; float: left"></div>
-<div id="map_canvas_2" style="top: 10px; left: 75px; width:210px; height:220px; display: none;"></div>
+	<iframe style="width:100%; height:100%; float: left" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2539.7102430517402!2d30.497238315590202!3d50.465120194189!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce6e133a084b%3A0x6f6a6b5ce34c9ff4!2z0JzQtdGH0LXRgtGMINCQ0YAt0KDQsNGF0LzQsCwgTHVraWFuaXZza2EgU3QsIDQ2LCBLeWl2!5e0!3m2!1sen!2sua!4v1469001427578" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 	</div>
 	<!-- <div class="copyright">Создание и разработка сайта ®Intellectus-studio 2016</div> -->
 </footer>
