--- a/halal/index.html
+++ b/halal/index.html
@@ -53,15 +53,17 @@
 						<li class="nav_item"><a class="nav_item_link" href="#">О компании</a></li>
 						<li class="nav_item"><a class="nav_item_link" href="#">Клиенты</a></li>
 						<li class="nav_item dropdown">
-							<a class="nav_item_link" href="#">Сертификация</a>
+							<a class="nav_item_link" href="#">Сертификация <i class="fa fa-caret-down" aria-hidden="true"></i></a>
 							  	<ul class="dropdown-content">
-								    <li class="dropdown-content_item"><a href="#">Об Исламе</a></li>
-								    <li class="dropdown-content_item"><a href="#">Наши новости</a></li>
-								    <li class="dropdown-content_item"><a href="#">Полезные статьи</a></li>
+								    <li class="dropdown-content_item"><a href="#">Что такое сертификация «Халяль»</a></li>
+								    <li class="dropdown-content_item"><a href="#">Процедура сертификации производства</a></li>
+								    <li class="dropdown-content_item"><a href="#">Требования к сырью и составляющим веществам</a></li>
+								     <li class="dropdown-content_item"><a href="#">Требования к условиям производства продукции</a></li>
+
 								</ul>
 						</li>
 						<li class="nav_item dropdown">
-							<a class="nav_item_link" href="#">Новости</a>
+							<a class="nav_item_link" href="#">Новости <i class="fa fa-caret-down" aria-hidden="true"></i></a>
 							  	<ul class="dropdown-content">
 								    <li class="dropdown-content_item"><a href="#">Об Исламе</a></li>
 								    <li class="dropdown-content_item"><a href="#">Наши новости</a></li>
