--- a/halal/index.html
+++ b/halal/index.html
@@ -54,7 +54,7 @@
 						<li class="nav_item"><a class="nav_item_link" href="#">Клиенты</a></li>
 						<li class="nav_item dropdown">
 							<a class="nav_item_link" href="#">Сертификация <i class="fa fa-caret-down" aria-hidden="true"></i></a>
-							  	<ul class="dropdown-content">
+							  	<ul class="dropdown-content wide">
 								    <li class="dropdown-content_item"><a href="#">Что такое сертификация «Халяль»</a></li>
 								    <li class="dropdown-content_item"><a href="#">Процедура сертификации производства</a></li>
 								    <li class="dropdown-content_item"><a href="#">Требования к сырью и составляющим веществам</a></li>
