--- a/halal/index.html
+++ b/halal/index.html
@@ -87,9 +87,9 @@
 <main>
 <div class="main">
 	<ul class="bxslider">
-	  <li><img src="img/slider.png" style="width: 100%"></li>
-	  <li><img src="img/slider.png" style="width: 100%"></li>
-	  <li><img src="img/slider.png" style="width: 100%"></li>
+	  <li><img src="img/Fruits,+veggies+banner2_79468387.jpg" style="width: 100%; height: auto;"></li>
+	  <li><img src="img/Fruits,+veggies+banner2_79468387.jpg" style="width: 100%; height: auto"></li>
+	  <li><img src="img/Fruits,+veggies+banner2_79468387.jpg" style="width: 100%; height: auto;"></li>
 	</ul>
 </div>
 <div class="partners">
