--- a/mazua/index.html
+++ b/mazua/index.html
@@ -23,7 +23,7 @@
 			</div>
 			<div class="operating_mode_weekend clearfix">
 				<div class="weekend">
-					<span class="week_start">СБ</span><span class="time"><i style="color: rgb( 219, 28, 44 );" class="fa fa-minus-circle" aria-hidden="true"></i></span><span class="week_end">НД</span>
+					<span class="week_start">СБ</span><span class="time"><i style="color: #db1c2c;" class="fa fa-minus-circle" aria-hidden="true"></i></span><span class="week_end">НД</span>
 					<img src="img/arrow_weekend.png">
 				</div>
 			</div>
@@ -120,7 +120,7 @@
 			</div>
 			<div class="operating_mode_weekend clearfix">
 				<div class="weekend">
-					<span class="week_start">СБ</span><span class="time"><i style="color: rgb( 219, 28, 44 );" class="fa fa-minus-circle" aria-hidden="true"></i></span><span class="week_end">НД</span>
+					<span class="week_start">СБ</span><span class="time"><i style="color: #db1c2c;" class="fa fa-minus-circle" aria-hidden="true"></i></span><span class="week_end">НД</span>
 					<img src="img/arrow_weekend.png">
 				</div>
 			</div>
