--- a/mazua/index.html
+++ b/mazua/index.html
@@ -52,6 +52,7 @@
 				<img src="img/3.png">
 				<h4>Техническое обслуживание</h4>
 				<p>Двигателей ЯМЗ, ММЗ, Cummins, Deutz.</p>
+				<h4>Техническая помощь</h4>
 			</li>
 
 		</ul>
