--- a/halal/index.html
+++ b/halal/index.html
@@ -22,7 +22,7 @@
 <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-<header>
+<header class="fixed_header">
 	<div class="first_layer">
 		<div class="wrapper clearfix cont">
 		<a href="index.html"><img class="logo" src="img/logo.png"></a>
@@ -49,35 +49,35 @@
 			<div class="wrapper clearfix">
 				<div class="container container_right col_container clearfix">
 				<div class="hamburger_menu"><i class="fa fa-bars" aria-hidden="true"></i></div>
-					<ul class="nav clearfix">
-						<li class="nav_item"><a class="nav_item_link" href="#">О компании</a></li>
-						<li class="nav_item"><a class="nav_item_link" href="#">Клиенты</a></li>
+					<ul class="nav clearfix animated">
+						<li class="nav_item"><a class="nav_item_link" href="javascript:void(0)">О компании</a></li>
+						<li class="nav_item"><a class="nav_item_link" href="javascript:void(0)">Клиенты</a></li>
 						<li class="nav_item dropdown">
-							<a class="nav_item_link" href="#">Сертификация <i class="fa fa-caret-down" aria-hidden="true"></i></a>
+							<a class="nav_item_link" href="javascript:void(0)">Сертификация <i class="fa fa-caret-down" aria-hidden="true"></i></a>
 							  	<ul class="dropdown-content wide">
-								    <li class="dropdown-content_item"><a href="#">Что такое сертификация «Халяль»</a></li>
-								    <li class="dropdown-content_item"><a href="#">Процедура сертификации производства</a></li>
-								    <li class="dropdown-content_item"><a href="#">Требования к сырью и составляющим веществам</a></li>
-								     <li class="dropdown-content_item"><a href="#">Требования к условиям производства продукции</a></li>
+								    <li class="dropdown-content_item"><a href="javascript:void(0)">Что такое сертификация «Халяль»</a></li>
+								    <li class="dropdown-content_item"><a href="javascript:void(0)">Процедура сертификации производства</a></li>
+								    <li class="dropdown-content_item"><a href="javascript:void(0)">Требования к сырью и составляющим веществам</a></li>
+								     <li class="dropdown-content_item"><a href="javascript:void(0)">Требования к условиям производства продукции</a></li>
 
 								</ul>
 						</li>
 						<li class="nav_item dropdown">
-							<a class="nav_item_link" href="#">Новости <i class="fa fa-caret-down" aria-hidden="true"></i></a>
+							<a class="nav_item_link" href="javascript:void(0)">Новости <i class="fa fa-caret-down" aria-hidden="true"></i></a>
 							  	<ul class="dropdown-content">
-								    <li class="dropdown-content_item"><a href="#">Об Исламе</a></li>
-								    <li class="dropdown-content_item"><a href="#">Наши новости</a></li>
-								    <li class="dropdown-content_item"><a href="#">Полезные статьи</a></li>
+								    <li class="dropdown-content_item"><a href="javascript:void(0)">Об Исламе</a></li>
+								    <li class="dropdown-content_item"><a href="javascript:void(0)">Наши новости</a></li>
+								    <li class="dropdown-content_item"><a href="javascript:void(0)">Полезные статьи</a></li>
 								</ul>
 						</li>
 						
-						<li class="nav_item"><a class="nav_item_link" href="#">Контакты</a></li>
+						<li class="nav_item"><a class="nav_item_link" href="javascript:void(0)">Контакты</a></li>
 					</ul>
 				
 					<ul class="lang clearfix">
-						<li class="lang_item"><a class="lang_item_link" href="#">ru</a></li>
-						<li class="lang_item"><a class="lang_item_link" href="#">fr</a></li>
-						<li class="lang_item"><a class="lang_item_link" href="#">ab</a></li>
+						<li class="lang_item"><a class="lang_item_link" href="javascript:void(0)">ru</a></li>
+						<li class="lang_item"><a class="lang_item_link" href="javascript:void(0)">fr</a></li>
+						<li class="lang_item"><a class="lang_item_link" href="javascript:void(0)">ab</a></li>
 					</ul>
 				</div>
 			</div>
