--- a/halal/index.html
+++ b/halal/index.html
@@ -25,7 +25,7 @@
 <header class="fixed_header">
 	<div class="first_layer">
 		<div class="wrapper clearfix cont">
-		<a href="index.html"><img class="logo" src="img/logo.png"></a>
+		<a href="index.html" class="logo"><img src="img/logo.png"></a>
 			<div class="container container_right">
 				<ul class="number clearfix">
 					<li class="number_item">(067) 547-30-80</li>
@@ -132,15 +132,15 @@
 		<h2 class="container_header">Наша деятельность</h2>
 		<ul class="clearfix">
 			<li class="activity_item">
-				<div class="activity_img"><img src="img/6.png"></div>
-				<div class="activity_text"><p>У нас есть многолетний опыт  и высококвалифицированные  специалисты</p></div>
+				<div class="activity_img"><div class="activity_img_container"><img src="img/6.png"></div></div>
+				<div class="activity_text"><p>У нас есть многолетний опыт  и высоко<br>квалифицированные  специалисты</p></div>
 			</li>
 			<li class="activity_item">
-				<div class="activity_img"><img src="img/5.png"></div>
+				<div class="activity_img"><div class="activity_img_container"><img src="img/5.png"></div></div>
 				<div class="activity_text"><p>Мы проводим независимую  и объективную оценку  производства продукции</p></div>
 			</li>
 			<li class="activity_item">
-				<div class="activity_img"><img src="img/4.png"></div>
+				<div class="activity_img"><div class="activity_img_container"><img src="img/4.png"></div></div>
 				<div class="activity_text"><p>Наша компания  гарантирует достоверность  нашего сертификата "Халяль" на международном уровне</p></div>
 			</li>
 		</ul>
