--- a/kancmarket/index.html
+++ b/kancmarket/index.html
@@ -182,7 +182,7 @@
     </div>
 </div>
 <div class="popular_goods">
-  <div class="container">
+  <div class="container container_goods">
     <h3>Популярные товары</h3>
       <div class="col-md-3 product_card">
         <div class="product_card_item">
