--- a/kancmarket/index.html
+++ b/kancmarket/index.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="css/owl.carousel.css">
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="css/animate.css">
+  <link rel="stylesheet" type="text/css" href="css/slick.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<script type="text/javascript" src="js/jquery.js"></script>
 </head>
@@ -17,7 +18,7 @@
 <nav class="navbar navbar-fixed-top">
   <div class="container clearfix"> 
     <div class="navbar-header">
-      <a class="navbar-brand page-scroll" href="#home"><img src="img/logo.png"  id="logo" alt="logo top"></a> </div>
+      <a class="navbar-brand page-scroll" href="#home"><img src="img/logo_new.png"  id="logo" alt="logo top"></a> </div>
     
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -43,10 +44,10 @@
       </form>
         </div>
         <div class="col-md-5 col-sm-4 clearfix">
-            <div class="number">
+            <div class="number col-md-7">
                 <i class="fa fa-phone" aria-hidden="true"></i>(061) 764-72-70
             </div>
-            <div class="callback">
+            <div class="callback col-md-5">
               <a href="" class="callback_btn">Заказать звонок</a>
               <div id="modal_form_recall" class="animated"> 
                    <form>
@@ -65,7 +66,7 @@
 </nav>
 <div id="owl-example" class="owl-carousel clearfix main_carousel">
   <div class="owl-slide" style="background-image: url(img/bg-deal.jpg)">
-		<div class="owl--text">
+		<div class="owl--text container">
 		<h2>Призыв к действию</h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna </p>
 		<a class="order_btn_link" href="">Заказать</a>
@@ -399,7 +400,7 @@
         </form>
       </div>
     </div>
-  <div class="footer_contacts">
+  <div class="footer_contacts container">
     <div class="col-md-4 wrapper_footer">
     <h3>Сервисы</h3>
       <ul class="footer_contacts_list">
@@ -412,6 +413,8 @@
       </ul>
     </div>
     <div class="col-md-8 wrapper_footer_map">
+    </div>
+    <div id="map">
     <div class="map_contacts">
       <ul class="map_contacts_container">
         <li class="map_contacts_item"> <i class="fa fa-home" aria-hidden="true"></i>
@@ -419,15 +422,14 @@
         <li class="map_contacts_item"><i class="fa fa-phone" aria-hidden="true"></i>(061) 764-72-70</li>
         <li class="map_contacts_item"><i class="fa fa-envelope" aria-hidden="true"></i>kans-market.zp@mail.ru</li>
       </ul>
-    </div>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2679.3546219246104!2d35.187612!3d47.813345!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x66a9d85c1a88419a!2z0JrQsNC90YYt0JzQsNGA0LrQtdGCINCa0LDQvdGG0LXQu9GP0YDQuNGP!5e0!3m2!1sru!2s!4v1404753315740" width="100%" height="370" frameborder="0"  frameborder="0" style="border:0"></iframe>
-    </div>
-  </div>
+      </div>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2679.3546219246104!2d35.187612!3d47.813345!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x66a9d85c1a88419a!2z0JrQsNC90YYt0JzQsNGA0LrQtdGCINCa0LDQvdGG0LXQu9GP0YDQuNGP!5e0!3m2!1sru!2s!4v1404753315740" width="100%" height="370" frameborder="0"  frameborder="0" style="border:0"></iframe></div>
   </div>
 </footer>
 
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js"></script>
+<script type="text/javascript" src="js/slick.min.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBTFO4WKZuuL-q5bSbv8LcsfIVwIkh_3aM"
   type="text/javascript"></script>
 <script type="text/javascript" src="js/scripts.js"></script>
