--- a/halal/certification.html
+++ b/halal/certification.html
@@ -51,32 +51,32 @@
 				<div class="hamburger_menu"><i class="fa fa-bars" aria-hidden="true"></i></div>
 					<ul class="nav clearfix animated">
 						<li class="nav_item"><a class="nav_item_link" href="javascript:void(0)">О компании</a></li>
-						<li class="nav_item"><a class="nav_item_link" href="javascript:void(0)">Клиенты</a></li>
 						<li class="nav_item dropdown">
 							<a class="nav_item_link" href="javascript:void(0)">Сертификация <i class="fa fa-caret-down" aria-hidden="true"></i></a>
 							  	<ul class="dropdown-content wide">
-								    <li class="dropdown-content_item"><a href="javascript:void(0)">Что такое сертификация «Халяль»</a></li>
-								    <li class="dropdown-content_item"><a href="javascript:void(0)">Процедура сертификации производства</a></li>
-								    <li class="dropdown-content_item"><a href="javascript:void(0)">Требования к сырью и составляющим веществам</a></li>
-								     <li class="dropdown-content_item"><a href="javascript:void(0)">Требования к условиям производства продукции</a></li>
+								    <li class="dropdown-content_item"><a href="certification.html">Что такое сертификация «Халяль»</a></li>
+								    <li class="dropdown-content_item"><a href="certification_2.html">Процедура сертификации производства</a></li>
+								    <li class="dropdown-content_item"><a href="certification_2.html">Требования к сырью и составляющим веществам</a></li>
+								     <li class="dropdown-content_item"><a href="certification_2.html">Требования к условиям производства продукции</a></li>
 
 								</ul>
 						</li>
+						<li class="nav_item"><a class="nav_item_link" href="manufacturers.html">Клиенты</a></li>
 						<li class="nav_item dropdown">
 							<a class="nav_item_link" href="javascript:void(0)">Новости <i class="fa fa-caret-down" aria-hidden="true"></i></a>
 							  	<ul class="dropdown-content">
-								    <li class="dropdown-content_item"><a href="javascript:void(0)">Об Исламе</a></li>
-								    <li class="dropdown-content_item"><a href="javascript:void(0)">Наши новости</a></li>
+								    <li class="dropdown-content_item"><a href="news_main.html">Об Исламе</a></li>
+								    <li class="dropdown-content_item"><a href="news_item.html">Наши новости</a></li>
 								    <li class="dropdown-content_item"><a href="javascript:void(0)">Полезные статьи</a></li>
 								</ul>
 						</li>
 						
-						<li class="nav_item"><a class="nav_item_link" href="javascript:void(0)">Контакты</a></li>
+						<li class="nav_item"><a class="nav_item_link" href="contacts.html">Контакты</a></li>
 					</ul>
 				
 					<ul class="lang clearfix">
 						<li class="lang_item"><a class="lang_item_link" href="javascript:void(0)">ru</a></li>
-						<li class="lang_item"><a class="lang_item_link" href="javascript:void(0)">fr</a></li>
+						<li class="lang_item"><a class="lang_item_link" href="javascript:void(0)">en</a></li>
 						<li class="lang_item"><a class="lang_item_link" href="javascript:void(0)">ab</a></li>
 					</ul>
 				</div>
@@ -88,8 +88,8 @@
 	<div class="wrapper clearfix">
 		<div class="breadcrumbs">
 			<ul class="breadcrumbs_container clearfix">
-				<li class="breadcrumbs_item"><a class="breadcrumbs_link" href="">Главная > </a></li>
-				<li class="breadcrumbs_item"><a class="breadcrumbs_link active" href="">Сертификация</a></li>
+				<li class="breadcrumbs_item"><a class="breadcrumbs_link" href="">Главная <i class="fa fa-angle-right" aria-hidden="true"></i> </a></li>
+				<li class="breadcrumbs_item"><a class="breadcrumbs_link active" href="">Сертификация <i class="fa fa-angle-right" aria-hidden="true"></i></a></li>
 			</ul>
 			<h2 class="section_header">Сертификация</h2>
 		</div>
@@ -99,7 +99,9 @@
 	<div class="wrapper">
 		<div style="text-align: center; padding-top: 30px;">
 		<img style="width: 100%;" src="img/cert_banner.png">
-
+		</div>
+		<div class="divider">
+			<svg preserveAspectRatio="none" viewBox="0 0 100 102" height="100" width="100%" version="1.1" xmlns="http://www.w3.org/2000/svg" style="background: #37682e;"><path d="M0 0 Q 2.5 40 5 0 Q 7.5 40 10 0Q 12.5 40 15 0Q 17.5 40 20 0Q 22.5 40 25 0Q 27.5 40 30 0Q 32.5 40 35 0Q 37.5 40 40 0Q 42.5 40 45 0Q 47.5 40 50 0 Q 52.5 40 55 0Q 57.5 40 60 0Q 62.5 40 65 0Q 67.5 40 70 0Q 72.5 40 75 0Q 77.5 40 80 0Q 82.5 40 85 0Q 87.5 40 90 0Q 92.5 40 95 0Q 97.5 40 100 0 Z" style="fill: #f0f0f0; stroke: #f0f0f0;"></path></svg>
 		</div>
 		</div>
 		<div class="certif_wrapper">
@@ -153,6 +155,7 @@
 	</div>
 </div>
 <footer class="clearfix">
+	<div class="wrapper">
 	<div class="column-2 clearfix">
 		<div class="footer_summary">
 			<img src="img/logo.png">
@@ -173,7 +176,9 @@
 	</div>
 			<div class="copyright clearfix">Создание и разработка сайта <a href="http://web-intellectus.com/">®Intellectus-studio 2016</a></div>
 	</div>
-	
+	<div class="footer_col-2"></div>
+	</div>
+	<div class="footer_contai">
 	<div class="column-4"><div class="footer_contacts">
 				<table cellpadding="5" style="margin: 0 auto;">
 					<tr>
@@ -200,8 +205,9 @@
 	<div class="column-5">
 	<iframe style="width:100%; height:100%; float: left" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2539.7102430517402!2d30.497238315590202!3d50.465120194189!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce6e133a084b%3A0x6f6a6b5ce34c9ff4!2z0JzQtdGH0LXRgtGMINCQ0YAt0KDQsNGF0LzQsCwgTHVraWFuaXZza2EgU3QsIDQ2LCBLeWl2!5e0!3m2!1sen!2sua!4v1469001427578" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 	</div>
-	<!-- <div class="copyright">Создание и разработка сайта ®Intellectus-studio 2016</div> -->
+	</div>
 </footer>
+
 
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="fancybox/source/jquery.fancybox.pack.js?v=2.1.5"></script>
