--- a/halal/index.html
+++ b/halal/index.html
@@ -208,7 +208,7 @@
 	</div>
 	</div>
 </footer>
-
+<a href="#" class="scroll_to_top icon-up show" title="Scroll to top"><i class="fa fa-angle-up" aria-hidden="true"></i></a>
 
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="fancybox/source/jquery.fancybox.pack.js?v=2.1.5"></script>
