--- a/halal/certification.html
+++ b/halal/certification.html
@@ -20,6 +20,7 @@
 <link rel="stylesheet" type="text/css" href="css/jquery.bxslider.css">
 <link rel="stylesheet" type="text/css" href="css/animate.css">
 <link rel="stylesheet" type="text/css" href="css/style.css">
+<link rel="icon" type="image/png" href="img/logo_marker.png">
 </head>
 <body>
 <header class="fixed_header">
@@ -100,8 +101,23 @@
 		<div style="text-align: center; padding-top: 30px;">
 		<img style="width: 100%;" src="img/cert_banner.png">
 		</div>
-		
-		<div class="certif_wrapper">
+		<div class="divider">
+			<svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 1200 50" style="enable-background:new 0 0 1200 50;" xml:space="preserve">
+<style type="text/css">
+	.st0{fill:none;stroke:#243B00;stroke-width:1.4734;}
+</style>
+<path class="st0" d="M0,20.3c6.9,5.9,15.8,9.5,25.6,9.5c9.5,0,18.2-3.4,25-9c6.8,5.6,15.5,9,25,9s18.2-3.4,25-9c6.8,5.6,15.5,9,25,9
+	s18.2-3.4,25-9c6.8,5.6,15.5,9,25,9s18.2-3.4,25-9c6.8,5.6,15.5,9,25,9s18.2-3.4,25-9c6.8,5.6,15.5,9,25,9s18.2-3.4,25-9
+	c6.8,5.6,15.5,9,25,9s18.2-3.4,25-9c6.8,5.6,15.5,9,25,9s18.2-3.4,25-9c6.8,5.6,15.5,9,25,9s18.2-3.4,25-9c6.8,5.6,15.5,9,25,9
+	s18.2-3.4,25-9c6.8,5.6,15.5,9,25,9s18.2-3.4,25-9c6.8,5.6,15.5,9,25,9s18.2-3.4,25-9c6.8,5.6,15.5,9,25,9s18.2-3.4,25-9
+	c6.8,5.6,15.5,9,25,9s18.2-3.4,25-9c6.8,5.6,15.5,9,25,9s18.2-3.4,25-9c6.8,5.6,15.5,9,25,9s18.2-3.4,25-9c6.8,5.6,15.5,9,25,9
+	s18.2-3.4,25-9c6.8,5.6,15.5,9,25,9s18.2-3.4,25-9c6.8,5.6,15.5,9,25,9s18.2-3.4,25-9c6.8,5.6,15.5,9,25,9s18.2-3.4,25-9
+	c6.8,5.6,15.5,9,25,9c9.5,0,18.2-3.4,25-9c6.8,5.6,15.5,9,25,9c9.5,0,18.2-3.4,25-9c6.8,5.6,15.5,9,25,9c9.5,0,18.2-3.4,25-9
+	c6.8,5.6,15.5,9,25,9c9.8,0,18.7-3.6,25.6-9.5"/>
+</svg>
+		</div>
+		<div class="certif_wrapper" style="background-image: url(img/bg_logo.png);">
 		<h3 class="inside_header">Требования к условиям производства продукции «Халяль»</h3>
 		<div class="certif_block">
 			<h5 class="certif_block_head">Требования к персоналу</h5>
@@ -205,13 +221,14 @@
 	</div>
 </footer>
 
-
 <script type="text/javascript" src="js/jquery.js"></script>
+<script type="text/javascript" src="js/jquery.validate.min.js"></script>
 <script type="text/javascript" src="fancybox/source/jquery.fancybox.pack.js?v=2.1.5"></script>
 <script type="text/javascript" src="js/owl.carousel.min.js"></script>
 <script type="text/javascript" src="js/jquery.bxslider.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBTFO4WKZuuL-q5bSbv8LcsfIVwIkh_3aM"
   type="text/javascript"></script>
+
 <script type="text/javascript" src="js/script.js"></script>
 
 <script type="text/javascript" src="fancybox/source/helpers/jquery.fancybox-buttons.js?v=1.0.5"></script>
