--- a/halal/index.html
+++ b/halal/index.html
@@ -19,6 +19,7 @@
 <link rel="stylesheet" type="text/css" href="css/jquery.bxslider.css">
 <link rel="stylesheet" type="text/css" href="css/animate.css">
 <link rel="stylesheet" type="text/css" href="css/style.css">
+<link rel="icon" type="image/png" href="img/logo_marker.png">
 </head>
 <body>
 <header class="fixed_header">
@@ -211,10 +212,13 @@
 <a href="#" class="scroll_to_top icon-up show" title="Scroll to top"><i class="fa fa-angle-up" aria-hidden="true"></i></a>
 
 <script type="text/javascript" src="js/jquery.js"></script>
+<script type="text/javascript" src="js/jquery.validate.min.js"></script>
 <script type="text/javascript" src="fancybox/source/jquery.fancybox.pack.js?v=2.1.5"></script>
 <script type="text/javascript" src="js/owl.carousel.min.js"></script>
 <script type="text/javascript" src="js/jquery.bxslider.js"></script>
-<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBTFO4WKZuuL-q5bSbv8LcsfIVwIkh_3aM"
+  type="text/javascript"></script>
+
 <script type="text/javascript" src="js/script.js"></script>
 
 <script type="text/javascript" src="fancybox/source/helpers/jquery.fancybox-buttons.js?v=1.0.5"></script>
