--- a/halal/manufacturers.html
+++ b/halal/manufacturers.html
@@ -20,6 +20,7 @@
 <link rel="stylesheet" type="text/css" href="css/jquery.bxslider.css">
 <link rel="stylesheet" type="text/css" href="css/animate.css">
 <link rel="stylesheet" type="text/css" href="css/style.css">
+<link rel="icon" type="image/png" href="img/logo_marker.png">
 </head>
 <body>
 <header class="fixed_header">
