--- a/halal/news_main.html
+++ b/halal/news_main.html
@@ -51,7 +51,7 @@
 				<div class="container container_right col_container clearfix">
 				<div class="hamburger_menu"><i class="fa fa-bars" aria-hidden="true"></i></div>
 					<ul class="nav clearfix animated">
-						<li class="nav_item"><a class="nav_item_link" href="javascript:void(0)">О компании</a></li>
+						<li class="nav_item"><a class="nav_item_link" href="about.html">О компании</a></li>
 						<li class="nav_item dropdown">
 							<a class="nav_item_link" href="javascript:void(0)">Сертификация <i class="fa fa-caret-down" aria-hidden="true"></i></a>
 							  	<ul class="dropdown-content wide">
@@ -105,7 +105,7 @@
 			<h3 class="news_item_item_head main_news_item_item_head">Халяль это независимая Украинская организация</h3>
 				<div class="manufacturers_item_text news_main_text">Соответствие товаров и услуг этому стандарту является одним из факторов успешного бизнеса на рынке мусульманских стран, ведь продукция-халяль </div>
 				<div class="post_time post_time_main_news">июнь 07. 2016</div>
-				<div class="read_more read_more_main_news"><a href="">Читать далее</a></div>
+				<div class="read_more read_more_main_news"><a href="news_item.html">Читать далее</a></div>
 			</div>
 		</div>
 		<div class="news_main_item clearfix">
@@ -114,7 +114,7 @@
 				<h3 class="news_item_item_head">Халяль это независимая Украинская организация</h3>
 				<div class="manufacturers_item_text news_main_text">Соответствие товаров и услуг этому стандарту является одним из факторов успешного бизнеса на рынке мусульманских стран, ведь продукция-халяль </div>
 				<div class="post_time">июнь 07. 2016</div>
-				<div class="read_more"><a href="">Читать далее</a></div>
+				<div class="read_more"><a href="news_item.html">Читать далее</a></div>
 			</div>
 		</div>
 		<div class="news_main_item clearfix">
@@ -132,7 +132,7 @@
 				<h3 class="news_item_item_head">Халяль это независимая Украинская организация</h3>
 				<div class="manufacturers_item_text news_main_text">Соответствие товаров и услуг этому стандарту является одним из факторов успешного бизнеса на рынке мусульманских стран, ведь продукция-халяль </div>
 				<div class="post_time">июнь 07. 2016</div>
-				<div class="read_more"><a href="">Читать далее</a></div>
+				<div class="read_more"><a href="news_item.html">Читать далее</a></div>
 			</div>
 		</div>
 		<div class="news_main_item clearfix">
@@ -150,7 +150,7 @@
 				<h3 class="news_item_item_head">Халяль это независимая Украинская организация</h3>
 				<div class="manufacturers_item_text news_main_text">Соответствие товаров и услуг этому стандарту является одним из факторов успешного бизнеса на рынке мусульманских стран, ведь продукция-халяль </div>
 				<div class="post_time">июнь 07. 2016</div>
-				<div class="read_more"><a href="">Читать далее</a></div>
+				<div class="read_more"><a href="news_item.html">Читать далее</a></div>
 			</div>
 		</div>
 	</div>
