--- a/halal/contacts.html
+++ b/halal/contacts.html
@@ -51,7 +51,7 @@
 				<div class="container container_right col_container clearfix">
 				<div class="hamburger_menu"><i class="fa fa-bars" aria-hidden="true"></i></div>
 					<ul class="nav clearfix animated">
-						<li class="nav_item"><a class="nav_item_link" href="javascript:void(0)">О компании</a></li>
+						<li class="nav_item"><a class="nav_item_link" href="about.html">О компании</a></li>
 						<li class="nav_item dropdown">
 							<a class="nav_item_link" href="javascript:void(0)">Сертификация <i class="fa fa-caret-down" aria-hidden="true"></i></a>
 							  	<ul class="dropdown-content wide">
@@ -108,7 +108,18 @@
 	<div class="wrapper clearfix">
 		<div class="col-1">
 		</div>
+		<div class="col-2">
+			<form class="contact_form">
+				<input type="text" placeholder="Введите Ваше имя*"  name="name"required="" minlength="2"><br>
+				<input type="phone" placeholder="Введите Ваш телефон*" name="phone" required=""><br>
+				<input type="email" placeholder="Введите Ваше email*" name="email" required="" pattern="[^ @]*@[^ @]*"><br>
+				<textarea placeholder="Введите Ваше сообщение"></textarea>
+				<div class="required_field">*-Поля обязательные для заполнения</div><br>
+				<input type="submit">
+			</form>
+		</div>
 		<div class="side_contact_container">
+		<div class="side_contact">
 				<div class="contact_item">
 					<i class="fa fa-location-arrow" aria-hidden="true"></i>
 					<div class="contact_line"></div>
@@ -135,16 +146,7 @@
 					<div class="address_contact">halal@halal.ua</div>
 				</div>
 			</div>
-		<div class="col-2">
-			<form class="contact_form">
-				<input type="text" placeholder="Введите Ваше имя*"  name="name"required="" minlength="2"><br>
-				<input type="phone" placeholder="Введите Ваш телефон*" name="phone" required=""><br>
-				<input type="email" placeholder="Введите Ваше email*" name="email" required="" pattern="[^ @]*@[^ @]*"><br>
-				<textarea placeholder="Введите Ваше сообщение"></textarea>
-				<div class="required_field">*-Поля обязательные для заполнения</div><br>
-				<input type="submit">
-			</form>
-		</div>
+			</div>
 	</div>
 </div>
 <footer class="clearfix">
