--- a/halal/index.html
+++ b/halal/index.html
@@ -50,7 +50,7 @@
 				<div class="container container_right col_container clearfix">
 				<div class="hamburger_menu"><i class="fa fa-bars" aria-hidden="true"></i></div>
 					<ul class="nav clearfix animated">
-						<li class="nav_item"><a class="nav_item_link" href="javascript:void(0)">О компании</a></li>
+						<li class="nav_item"><a class="nav_item_link" href="about.html">О компании</a></li>
 						<li class="nav_item dropdown">
 							<a class="nav_item_link" href="javascript:void(0)">Сертификация <i class="fa fa-caret-down" aria-hidden="true"></i></a>
 							  	<ul class="dropdown-content wide">
@@ -66,8 +66,8 @@
 							<a class="nav_item_link" href="javascript:void(0)">Новости <i class="fa fa-caret-down" aria-hidden="true"></i></a>
 							  	<ul class="dropdown-content">
 								    <li class="dropdown-content_item"><a href="news_main.html">Об Исламе</a></li>
-								    <li class="dropdown-content_item"><a href="news_item.html">Наши новости</a></li>
-								    <li class="dropdown-content_item"><a href="javascript:void(0)">Полезные статьи</a></li>
+								    <li class="dropdown-content_item"><a href="news_main.html">Наши новости</a></li>
+								    <li class="dropdown-content_item"><a href="news_main.html">Полезные статьи</a></li>
 								</ul>
 						</li>
 						
