--- a/halal/manufacturers.html
+++ b/halal/manufacturers.html
@@ -51,7 +51,7 @@
 				<div class="container container_right col_container clearfix">
 				<div class="hamburger_menu"><i class="fa fa-bars" aria-hidden="true"></i></div>
 					<ul class="nav clearfix animated">
-						<li class="nav_item"><a class="nav_item_link" href="javascript:void(0)">О компании</a></li>
+						<li class="nav_item"><a class="nav_item_link" href="about.html">О компании</a></li>
 						<li class="nav_item dropdown">
 							<a class="nav_item_link" href="javascript:void(0)">Сертификация <i class="fa fa-caret-down" aria-hidden="true"></i></a>
 							  	<ul class="dropdown-content wide">
@@ -105,7 +105,7 @@
 				<h3 class="manufacturers_item_head">ВЕРЕС</h3>
 				<div class="manufacturers_item_text">Соответствие товаров и услуг этому стандарту является одним из факторов успешного бизнеса на рынке мусульманских стран, ведь продукция-халяль </div>
 			</div>
-			<div class="read_more"><a href="">Читать далее</a></div>
+			<div class="read_more"><a href="client.html">Читать далее</a></div>
 		</div>
 		<div class="manufacturers_slider">
 			<div class="slider">
@@ -150,7 +150,7 @@
 			<div class="manufacturers_item_content">
 				<h3 class="manufacturers_item_head">Олейна</h3>
 				<div class="manufacturers_item_text">Соответствие товаров и услуг этому стандарту является одним из факторов успешного бизнеса на рынке мусульманских стран, ведь продукция-халяль </div>
-				<div class="read_more"><a href="">Читать далее</a></div>
+				<div class="read_more"><a href="client.html">Читать далее</a></div>
 			</div>
 		</div>
 		<div class="manufacturers_slider">
@@ -197,7 +197,7 @@
 				<h3 class="manufacturers_item_head">Роллтон</h3>
 				<div class="manufacturers_item_text">Соответствие товаров и услуг этому стандарту является одним из факторов успешного бизнеса на рынке мусульманских стран, ведь продукция-халяль </div>
 			</div>
-			<div class="read_more"><a href="">Читать далее</a></div>
+			<div class="read_more"><a href="client.html">Читать далее</a></div>
 		</div>
 		<div class="manufacturers_slider">
 			<div class="slider">
@@ -243,7 +243,7 @@
 				<h3 class="manufacturers_item_head">Щедро</h3>
 				<div class="manufacturers_item_text">Соответствие товаров и услуг этому стандарту является одним из факторов успешного бизнеса на рынке мусульманских стран, ведь продукция-халяль </div>
 			</div>
-			<div class="read_more"><a href="">Читать далее</a></div>
+			<div class="read_more"><a href="client.html">Читать далее</a></div>
 		</div>
 		<div class="manufacturers_slider">
 			<div class="slider">
@@ -289,7 +289,7 @@
 				<h3 class="manufacturers_item_head">Арроз</h3>
 				<div class="manufacturers_item_text">Соответствие товаров и услуг этому стандарту является одним из факторов успешного бизнеса на рынке мусульманских стран, ведь продукция-халяль </div>
 			</div>
-			<div class="read_more"><a href="">Читать далее</a></div>
+			<div class="read_more"><a href="client.html">Читать далее</a></div>
 		</div>
 		<div class="manufacturers_slider">
 			<div class="slider">
