--- a/halal/news_item.html
+++ b/halal/news_item.html
@@ -51,7 +51,7 @@
 				<div class="container container_right col_container clearfix">
 				<div class="hamburger_menu"><i class="fa fa-bars" aria-hidden="true"></i></div>
 					<ul class="nav clearfix animated">
-						<li class="nav_item"><a class="nav_item_link" href="javascript:void(0)">О компании</a></li>
+						<li class="nav_item"><a class="nav_item_link" href="about.html">О компании</a></li>
 						<li class="nav_item dropdown">
 							<a class="nav_item_link" href="javascript:void(0)">Сертификация <i class="fa fa-caret-down" aria-hidden="true"></i></a>
 							  	<ul class="dropdown-content wide">
@@ -100,7 +100,7 @@
 	<div class="wrapper">
 		<div class="main_img_wrapper" style="text-align: center; padding-top: 30px;">
 		<img style="width: 100%;" src="img/HQ-Pictures-Fruits-vegetables-3.jpg">
-		<div class="img_text">
+		<div class="img_text certif_wrapper">
 			<h2>Халяль -  это независимая Украинская организация</h2>
 		</div>
 		</div>
