--- a/halal/certification.html
+++ b/halal/certification.html
@@ -68,7 +68,7 @@
 							  	<ul class="dropdown-content">
 								    <li class="dropdown-content_item"><a href="news_main.html">Об Исламе</a></li>
 								    <li class="dropdown-content_item"><a href="news_item.html">Наши новости</a></li>
-								    <li class="dropdown-content_item"><a href="javascript:void(0)">Полезные статьи</a></li>
+								    <li class="dropdown-content_item"><a href="news_item.html">Полезные статьи</a></li>
 								</ul>
 						</li>
 						
