--- a/halal/contacts.html
+++ b/halal/contacts.html
@@ -67,8 +67,8 @@
 							<a class="nav_item_link" href="javascript:void(0)">Новости <i class="fa fa-caret-down" aria-hidden="true"></i></a>
 							  	<ul class="dropdown-content">
 								    <li class="dropdown-content_item"><a href="news_main.html">Об Исламе</a></li>
-								    <li class="dropdown-content_item"><a href="news_item.html">Наши новости</a></li>
-								    <li class="dropdown-content_item"><a href="javascript:void(0)">Полезные статьи</a></li>
+								    <li class="dropdown-content_item"><a href="news_main.html">Наши новости</a></li>
+								    <li class="dropdown-content_item"><a href="news_main.html">Полезные статьи</a></li>
 								</ul>
 						</li>
 						
@@ -105,20 +105,10 @@
 	</div>
 </div>
 <div class="contacts_container">
-	<div class="wrapper clearfix">
+<div class="bg_col-1"></div>
+	<div class="wrapper clearfix contacts_container_item">
 		<div class="col-1">
-		</div>
-		<div class="col-2">
-			<form class="contact_form">
-				<input type="text" placeholder="Введите Ваше имя*"  name="name"required="" minlength="2"><br>
-				<input type="phone" placeholder="Введите Ваш телефон*" name="phone" required=""><br>
-				<input type="email" placeholder="Введите Ваше email*" name="email" required="" pattern="[^ @]*@[^ @]*"><br>
-				<textarea placeholder="Введите Ваше сообщение"></textarea>
-				<div class="required_field">*-Поля обязательные для заполнения</div><br>
-				<input type="submit">
-			</form>
-		</div>
-		<div class="side_contact_container">
+			<div class="side_contact_container">
 		<div class="side_contact">
 				<div class="contact_item">
 					<i class="fa fa-location-arrow" aria-hidden="true"></i>
@@ -147,6 +137,17 @@
 				</div>
 			</div>
 			</div>
+		</div>
+		<div class="col-2">
+			<form class="contact_form">
+				<input type="text" placeholder="Введите Ваше имя*"  name="name"required="" minlength="2"><br>
+				<input type="phone" placeholder="Введите Ваш телефон*" name="phone" required=""><br>
+				<input type="email" placeholder="Введите Ваше email*" name="email" required="" pattern="[^ @]*@[^ @]*"><br>
+				<textarea placeholder="Введите Ваше сообщение"></textarea>
+				<div class="required_field">*-Поля обязательные для заполнения</div><br>
+				<input type="submit">
+			</form>
+		</div>
 	</div>
 </div>
 <footer class="clearfix">
