--- a/halal/news_main.html
+++ b/halal/news_main.html
@@ -67,8 +67,8 @@
 							<a class="nav_item_link" href="javascript:void(0)">Новости <i class="fa fa-caret-down" aria-hidden="true"></i></a>
 							  	<ul class="dropdown-content">
 								    <li class="dropdown-content_item"><a href="news_main.html">Об Исламе</a></li>
-								    <li class="dropdown-content_item"><a href="news_item.html">Наши новости</a></li>
-								    <li class="dropdown-content_item"><a href="javascript:void(0)">Полезные статьи</a></li>
+								    <li class="dropdown-content_item"><a href="news_main.html">Наши новости</a></li>
+								    <li class="dropdown-content_item"><a href="news_main.html">Полезные статьи</a></li>
 								</ul>
 						</li>
 						
